[package]
name = "common"
version = "0.2.1"
edition = "2021"
description = "Robotics Dashboard Common"
homepage = "https://roboticsdashboard.com/"
repository = "https://github.com/Robotics-dashboard/common.git"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
async-trait = "0"
reqwest = { version = "0", features = ["json"] }
serde_yaml = "0"
rust-ini = "0"
anyhow = "1"

[lib]
name = "common"
path = "src/lib.rs"
